--- a/roster.html
+++ b/roster.html
@@ -94,7 +94,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (4)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td>HOU</td><td>Deshaun Watson         </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
@@ -108,6 +107,7 @@
 <tr><td>CAR</td><td>Robby Anderson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
+<tr><td>ARI</td><td>Zach Ertz              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
