--- a/week6.html
+++ b/week6.html
@@ -22,13 +22,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Lance</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
