--- a/pickups.html
+++ b/pickups.html
@@ -274,8 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brandin Cooks/Ty'Son Williams</td>
+<td width=50>10/17</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
