--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6P</b></a><br>
+<a href="week6.html"><b>6</b></a>
+<a href="week7.html"><b>7P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,43 +64,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3770</font></td>
-    <td><font size=2>2900</font></td>
-    <td><font size=2>1045</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4290</font></td>
-    <td><font size=2>3830</font></td>
+    <td><font size=2>5135</font></td>
+    <td><font size=2>4270</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>610</font></td>
+    <td><font size=2>2</font></td>
+<tr><td><font size=2>Sam(9)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4195</font></td>
+    <td><font size=2>3500</font></td>
+    <td><font size=2>1045</font></td>
+    <td><font size=2>425</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3865</font></td>
-    <td><font size=2>3795</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4465</font></td>
+    <td><font size=2>4220</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3125</font></td>
-    <td><font size=2>3980</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3785</font></td>
+    <td><font size=2>4685</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3070</font></td>
-    <td><font size=2>4465</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3510</font></td>
+    <td><font size=2>5310</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
@@ -112,42 +113,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3065</font></td>
-    <td><font size=2>2705</font></td>
-    <td><font size=2>745</font></td>
+    <td><font size=2>3830</font></td>
+    <td><font size=2>3465</font></td>
+    <td><font size=2>765</font></td>
     <td><font size=2>390</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3775</font></td>
-    <td><font size=2>3380</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4535</font></td>
+    <td><font size=2>4145</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>465</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3645</font></td>
-    <td><font size=2>3400</font></td>
-    <td><font size=2>865</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3575</font></td>
-    <td><font size=2>3680</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4355</font></td>
+    <td><font size=2>4385</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3310</font></td>
-    <td><font size=2>3355</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4350</font></td>
+    <td><font size=2>4180</font></td>
+    <td><font size=2>865</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(6)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4015</font></td>
+    <td><font size=2>4015</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>525</font></td>
     <td><font size=2>0</font></td>
