--- a/week6.html
+++ b/week6.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>KMurray</td>       <td></td><td align=right>255</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>50</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>THiggins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>45</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>45</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>205</td></tr>
+<tr><td></td>              <td></td><td align=right>600</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>175</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>30</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Cooks</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>55</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>425</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>170</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>140</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>195</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>50</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>100</td></tr>
+<tr><td>Hubbard</td>       <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>760</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>180</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>220</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>110</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>175</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>35</td></tr>
 <tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>20</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>765</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Folk</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>75</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>85</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>170</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>120</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Folk</td>          <td></td><td align=right>15</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>45</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>Darnold</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Darnold</td>       <td></td><td align=right>80</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>85</td></tr>
+<tr><td>Ruggs</td>         <td></td><td align=right>170</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>105</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>90</td></tr>
+<tr><td></td>              <td></td><td align=right>705</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>35</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>130</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>190</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>160</td></tr>
+<tr><td></td>              <td></td><td align=right>705</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>235</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>185</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>110</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>780</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>190</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>40</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>110</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>440</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>145</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>420</td></tr>
 <tr><td>Booker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>145</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>5</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>130</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>845</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,43 +166,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3770</font></td>
-    <td><font size=2>2900</font></td>
-    <td><font size=2>1045</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4290</font></td>
-    <td><font size=2>3830</font></td>
+    <td><font size=2>5135</font></td>
+    <td><font size=2>4270</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>610</font></td>
+    <td><font size=2>2</font></td>
+<tr><td><font size=2>Sam(9)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4195</font></td>
+    <td><font size=2>3500</font></td>
+    <td><font size=2>1045</font></td>
+    <td><font size=2>425</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3865</font></td>
-    <td><font size=2>3795</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4465</font></td>
+    <td><font size=2>4220</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3125</font></td>
-    <td><font size=2>3980</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3785</font></td>
+    <td><font size=2>4685</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3070</font></td>
-    <td><font size=2>4465</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3510</font></td>
+    <td><font size=2>5310</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3065</font></td>
-    <td><font size=2>2705</font></td>
-    <td><font size=2>745</font></td>
+    <td><font size=2>3830</font></td>
+    <td><font size=2>3465</font></td>
+    <td><font size=2>765</font></td>
     <td><font size=2>390</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3775</font></td>
-    <td><font size=2>3380</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4535</font></td>
+    <td><font size=2>4145</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>465</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3645</font></td>
-    <td><font size=2>3400</font></td>
-    <td><font size=2>865</font></td>
-    <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3575</font></td>
-    <td><font size=2>3680</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4355</font></td>
+    <td><font size=2>4385</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3310</font></td>
-    <td><font size=2>3355</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4350</font></td>
+    <td><font size=2>4180</font></td>
+    <td><font size=2>865</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(6)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4015</font></td>
+    <td><font size=2>4015</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>525</font></td>
     <td><font size=2>0</font></td>
