--- a/roster.html
+++ b/roster.html
@@ -15,6 +15,7 @@
 <tr><td>DET</td><td>Jamaal Williams        </td></tr>
 <tr><td> LV</td><td>Kenyan Drake           </td></tr>
 <tr><td>BAL</td><td>Latavius Murray        </td></tr>
+<tr><td>BAL</td><td>Devonta Freeman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
@@ -29,7 +30,6 @@
 <tr><td> NE</td><td>Mac Jones              </td></tr>
 <tr><td>HOU</td><td>Davis Mills            </td></tr>
 <tr><td>BAL</td><td>Rashod Bateman         </td></tr>
-<tr><td>CLE</td><td>Chris Naggar           </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -77,8 +77,8 @@
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td>BUF</td><td>Emmanuel Sanders       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>WAS</td><td>Logan Thomas           </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
+<tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td> NE</td><td>Nick Folk              </td></tr>
@@ -162,16 +162,16 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
-<tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
-<tr><td>DET</td><td>Tyrell Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Rodrigo Blankenship    </td></tr>
+<tr><td>TEN</td><td>Randy Bullock          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
 <tr><td> TB</td><td>Jose Borregales        </td></tr>
+<tr><td>CLE</td><td>Demetric Felton        </td></tr>
 </table>
 </td>
 </tr>
@@ -242,10 +242,10 @@
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
+<tr><td>CLE</td><td>D'Ernest Johnson       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>TEN</td><td>Julio Jones            </td></tr>
-<tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
 <tr><td height=9></td><td></td></tr>
