--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Devonta Freeman/Chris Naggar</td>
+<td width=50>10/19</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>D'Ernest Johnson/Brandon Aiyuk</td>
+<td width=50>10/19</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -338,7 +338,10 @@ Team 5  - Damien Williams/DJ Chark (10/5)<br>
 Team 6  - Alex Collins/Rashad Penny (10/7)<br>
 Team 6  - Sam Darnold/Justice Hill (10/8)<br>
 Team 4  - Darrel Williams/Tony Jones (10/12)<br>
-Team 7  - Devontae Booker/Le'Veon Bell (10/13)
+Team 7  - Devontae Booker/Le'Veon Bell (10/13)<br>
+Team 6  - Randy Bullock/JuJu Smith-Schuster (10/19)<br>
+Team 6  - Demetric Felton/Tyrell Williams (10/19)<br>
+Team 3  - Hunter Henry/Logan Thomas (10/20)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
