--- a/roster.html
+++ b/roster.html
@@ -192,7 +192,7 @@
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
-<tr><td>BUF</td><td>Gabriel Davis          </td></tr>
+<tr><td> KC</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td height=9></td><td></td></tr>
