--- a/week7.html
+++ b/week7.html
@@ -27,7 +27,7 @@
 <tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
