--- a/roster.html
+++ b/roster.html
@@ -129,7 +129,6 @@
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
 <tr><td>HOU</td><td>Mark Ingram            </td></tr>
-<tr><td>CHI</td><td>Damien Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
@@ -141,6 +140,7 @@
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
+<tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
