--- a/pickups.html
+++ b/pickups.html
@@ -18,8 +18,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jerry Jeudy/Laviska Shenault</td>
+<td width=50>10/26</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Samaje Perine/JJ Taylor</td>
+<td width=50>10/27</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -341,7 +341,9 @@ Team 4  - Darrel Williams/Tony Jones (10/12)<br>
 Team 7  - Devontae Booker/Le'Veon Bell (10/13)<br>
 Team 6  - Randy Bullock/JuJu Smith-Schuster (10/19)<br>
 Team 6  - Demetric Felton/Tyrell Williams (10/19)<br>
-Team 3  - Hunter Henry/Logan Thomas (10/20)
+Team 3  - Hunter Henry/Logan Thomas (10/20)<br>
+Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
+Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
