--- a/roster.html
+++ b/roster.html
@@ -20,7 +20,7 @@
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
-<tr><td>JAX</td><td>Laviska Shenault       </td></tr>
+<tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -163,14 +163,14 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
+<tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
+<tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>IND</td><td>Rodrigo Blankenship    </td></tr>
 <tr><td>TEN</td><td>Randy Bullock          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
-<tr><td> TB</td><td>Jose Borregales        </td></tr>
 <tr><td>CLE</td><td>Demetric Felton        </td></tr>
 </table>
 </td>
@@ -272,7 +272,7 @@
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>MIA</td><td>Myles Gaskin           </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
-<tr><td> NE</td><td>JJ Taylor              </td></tr>
+<tr><td>CIN</td><td>Samaje Perine          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
