--- a/roster.html
+++ b/roster.html
@@ -16,6 +16,7 @@
 <tr><td> LV</td><td>Kenyan Drake           </td></tr>
 <tr><td>BAL</td><td>Latavius Murray        </td></tr>
 <tr><td>BAL</td><td>Devonta Freeman        </td></tr>
+<tr><td>HOU</td><td>David Johnson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
@@ -24,7 +25,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td>ARI</td><td>Matt Prater            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Mac Jones              </td></tr>
@@ -211,7 +211,6 @@
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
-<tr><td>PHI</td><td>Miles Sanders          </td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
@@ -226,6 +225,7 @@
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>MIN</td><td>Greg Joseph            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td>NYG</td><td>Kadarius Toney         </td></tr>
