--- a/pickups.html
+++ b/pickups.html
@@ -30,8 +30,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>David Johnson/Brandon McManus</td>
+<td width=50>10/31</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -343,7 +343,8 @@ Team 6  - Randy Bullock/JuJu Smith-Schuster (10/19)<br>
 Team 6  - Demetric Felton/Tyrell Williams (10/19)<br>
 Team 3  - Hunter Henry/Logan Thomas (10/20)<br>
 Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
-Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)
+Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
+Team 8  - Greg Joseph/Miles Sanders (10/31)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
